#2144 Enhance Static Properties by UI validation V2 (#2443)
* #2144 updated port number fields to Integer type for ui validation

* #2144 added migration for Plc4xModbusAdapter

* #2144 added migration for Plc4xModbusAdapter

* #2144 added migration V2 for OpcUaAdapter

* #2144 added migration V2 for OpcUaAdapter

* #2144 added migration for RosBridgeAdapter

* checkstyle changes

* #2144 Added migration test for Plc4xModbusAdapter

* #2144 Added migration test for RosBridgeAdapter

* #2144 Added migration test for OpcUaAdapterMigrationV2

* fix(#2144): Fix label generation for migrated elements

* fix(#2144): Set default static property values for adapter instance

* fix(#2144): Set default static property values for adapter instance

* Updated OpcUaAdapterMigrationTest (#2454)

* fix(#2144): Rename test for opc migration v2

* fix(#2144): Add methods to provide default if not set by user

* fix(#2144): Change logic of opc ua migration

* fix(#2144): Update modbus adapater migration

* fix(#2144): Update ros bridge adapter migration

* fix(#2144): Change default value of replaceTitles

---------

Co-authored-by: Isaak <krutisaak099@gmail.com>